core/longhorn-assets/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.x.pmcd.io`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
#  tls:
#    certResolver: pmcdio
